# delProject

./: .gitignore
backend/: .gitignore  main.js  package.json
backend/logs/: .1bd240188ea3665b8fab0c167cb588a827b609f6-audit.json  .264c4e8e5c417017cb808b2c1974d57eea1a91fe-audit.json  .2c36e25ebc9610150179180def9185c3deb93ff9-audit.json  .75af9a504b66b0a8cbaf634e005aef698e9d0b10-audit.json  .9c75d7c3b4d9abea026d4f42415dd6b2ed8b59da-audit.json  .fc534bc901040a69a9016462b92dba54e1e9652f-audit.json
backend/postmanJson/: tournament.json
backend/scripts/: migrate-user-groups.js  migrateGroupsAndUsers.js
backend/src/admin/: adminMiddleware.js
backend/src/auth/: authController.js  authRequest.js  authService.js
backend/src/config/: cloudinaryService.js  cloudinarySetup.js  firebaseAdmin.js  firebaseController.js  firebaseService.js
backend/src/firebase/: firebaseAdminService.js  firebaseClient.js  firebaseConfig.js  firebaseService.js
diamond-blockchain/: CMakeLists.txt
diamond-blockchain/cpp_node/include/: NodeServer.hpp  httplib.h
diamond-blockchain/cpp_node/src/: Block.hpp  Blockchain.cpp  Blockchain.hpp  Transaction.cpp  Transaction.hpp  main.cpp
diamond-blockchain/docs/: design.md
diamond-blockchain/nodeBridge/src/: index.js
my-app/: App.js  app.json  package-lock.json  package.json  tailwind.config.js
my-app/components/: KeyboardWrapper.jsx  Login.jsx
my-app/context/: UserContext.jsx
my-app/navigations/: RootNavigation.jsx
my-app/pages/: HomeScreen.jsx  LoginPage.jsx  RegisterPage.jsx
my-app/stacks/: AppStack.jsx  AuthStack.jsx
(+183 files in other folders)
